# extract_anchors

./: .gitignore  Cargo.toml  README.md
src/: anchors_in_file.rs  create_new_path.rs  error.rs  extract_anchor_name_from_line.rs  main.rs  read_file.rs  result.rs  unindent.rs
