[package]
name = "extract_anchors"
version = "0.1.1"
edition = "2021"
description = "Утилита для извлечения из исходных кодов всех помеченных отрывков"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { version = "1.0.61" }
tracing = { version = "0.1.40" }
walkdir = { version = "2" }
tracing-subscriber = { version = "0.3.18" }
